--- a/style.css
+++ b/style.css
@@ -1,41 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
-*{
-    margin: 0; /* Define a margem geral do projeto (pois esta na *) */
-    padding: 0; /* Define o espaço entre o conteúdo de um elemento e sua borda */
-    box-sizing: border-box; /* Determina como o tamanho total de um elemento é calculado */
+
+* {
+    margin: 0;
+    /* Define a margem geral do projeto (pois esta na *) */
+    padding: 0;
+    /* Define o espaço entre o conteúdo de um elemento e sua borda */
+    box-sizing: border-box;
+    /* Determina como o tamanho total de um elemento é calculado */
 }
-.container{
-    max-width: 3000px; /* Define a largura máxima do container */
-    display: flex; /* Coloca o container como um container flexível de acordo com o modelo flexbox, ou seja os filhos são tratados como itens flexiveis e são alinhados e distribuidos */
-    align-items: center; /* Alinha os itens filhos ao longo do eixo transversa */
-    justify-content: center; /* Alinha os itens filhos ao longo do eixo principal */
+
+.container {
+    max-width: 3000px;
+    /* Define a largura máxima do container */
+    display: flex;
+    /* Coloca o container como um container flexível de acordo com o modelo flexbox, ou seja os filhos são tratados como itens flexiveis e são alinhados e distribuidos */
+    align-items: center;
+    /* Alinha os itens filhos ao longo do eixo transversa */
+    justify-content: center;
+    /* Alinha os itens filhos ao longo do eixo principal */
 }
-header{
-    background-color:orange;
-    width: 100%; /*Define a largura de um elemento*/
+
+header {
+    background-color: orange;
+    width: 100%;
+    /*Define a largura de um elemento*/
     padding: 5px;
 
 }
-.logo{
+
+.logo {
     width: 20%;
-    
+
 }
-.menu{
+
+.menu {
     width: 75%;
-   
+
     text-transform: uppercase;
 
 }
-.menu nav a{
-    
+
+.menu nav a {
+
     font-size: 40px;
     text-decoration: none;
-    color:whitesmoke;
+    color: whitesmoke;
     padding-right: 90px;
     font-family: "Lalezar", system-ui;
     position: relative;
 }
-.menu nav a::after{
+
+.menu nav a::after {
     content: " ";
     width: 0px;
     height: 4px;
@@ -45,37 +60,149 @@ header{
     left: 0;
     transition: 0.5s;
 }
-.menu nav a:hover::after{
+
+.menu nav a:hover::after {
     width: 50px;
 }
-body{
+
+body {
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     min-height: 100vh
+}
+
+.conteudo {
+    display: flex;
+    flex: 1; /* Faz o conteúdo principal expandir para ocupar o espaço disponível */
+    justify-content: space-between;
     
 }
-.conteudo{
-    flex: 1; /* Faz o conteúdo principal expandir para ocupar o espaço disponível */
-}
+
 .frase2 {
     font-family: "Lalezar", system-ui;
     font-size: 70px;
-    padding-left: 50px; /* Muda a frase1 de forma horizontal */
+    padding-left: 50px;
+    /* Muda a frase1 de forma horizontal */
 }
-.rodape{
+
+.rodape {
     position: relative;
     background-color: orange;
     display: grid;
     height: 105px;
 }
-.logorodape{
+
+.logorodape {
     position: absolute;
 }
-.textorodape{
-    align-self: center; /* Alinhamento vertical em relação ao grid */
+
+.textorodape {
+    align-self: center;
+    /* Alinhamento vertical em relação ao grid */
     font-family: "Lalezar", system-ui;
     color: whitesmoke;
     font-size: 25px;
-    justify-self: center; /* Alinhamento horizontal em relação ao grid */
+    justify-self: center;
+    /* Alinhamento horizontal em relação ao grid */
+}
+
+.Slider{
+    margin-right: 10%;
+    margin-top: 4%;
+    position: relative;
+}
+.sombraslider{
+    position: absolute;
+    background-color: orange;
+    width: 650px;
+    height: 650px;
+    transform: translate(-5% , 5%);
+    border-radius: 10px;
+    
+}
+.slideshowcontainer {
+    width: 650px;
+    position: relative;
+    margin: auto;
+    /*Centraliza o slier horizontalmente na página. */
+}
+
+
+.mySlides {
+    display: none; /* Esconde as imagens */
+    
+}
+
+
+
+.prev,
+.next {
+    cursor: pointer;
+    /* Muda o Curso quando é passado em cima */
+    position: absolute;
+    /* Deixa a posição fixa em relação ao pai */
+    top: 50%;
+    /* Centraliza verticamelte em relação ao pai */
+    width: auto;
+    margin-top: -22px;
+    /* Ajusta a posição vertical para que o centro do botão esteja alinhado ao centro do contêiner */
+    padding: 16px;
+    color: orange;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    /* Muda o Curso quando é passado em cima */
+    user-select: none;
+}
+
+
+.next {
+    right: 0;
+    /* Posicionando o botão next na direita */
+    border-radius: 3px 0 0 3px;
+}
+
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+
+
+.dot {
+    /* botões de alterar as imagens */
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: whitesmoke;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    z-index: 99;
+}
+
+.active,
+.dot:hover {
+    background-color: grey;
+}
+
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
