--- a/noticias.css
+++ b/noticias.css
@@ -65,6 +65,9 @@ header {
     width: 50px;
 }
 
+.main_noticias{
+    margin-bottom: 30px;
+}
 .imagens {
     width: 450px;
     margin-left: 285px;
